Footer overlap bug fix

--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -3,11 +3,8 @@
     display: flex;
     justify-content: space-between;    
     align-items: center;
-    position: fixed;
-    bottom: 0;
     width: 100%;
-    height: 15%;
-    min-height: 10%;
+    height: 100%;
 }
 
 .footer-middle-section{
